[gd_scene load_steps=5 format=3 uid="uid://6pxywguedebm"]

[ext_resource type="Script" path="res://addons/MultiplayCore/MultiPlay.gd" id="1_8ebmv"]
[ext_resource type="PackedScene" uid="uid://bh3eicxcruiih" path="res://demo/2d_platformer/scenes/player.tscn" id="2_bkr1f"]
[ext_resource type="PackedScene" uid="uid://ca6vuiof6mwa" path="res://demo/2d_platformer/scenes/levels/level_1.tscn" id="3_5d7qw"]
[ext_resource type="Script" path="res://addons/MultiplayCore/spawner/MPSpawnerTransform2D.gd" id="4_6tabp"]

[node name="Main" type="Node2D"]
texture_filter = 1

[node name="MultiPlayCore" type="Node" parent="."]
script = ExtResource("1_8ebmv")
player_scene = ExtResource("2_bkr1f")
first_scene = ExtResource("3_5d7qw")
swap_input_action = "swap"

[node name="MPStartTransform2D" type="Node2D" parent="."]
script = ExtResource("4_6tabp")
