[gd_scene load_steps=7 format=3 uid="uid://yx2r3bxi0kfc"]

[ext_resource type="Script" path="res://addons/MultiplayCore/MultiPlay.gd" id="1_ubvtg"]
[ext_resource type="PackedScene" uid="uid://lw18orwsroqc" path="res://test_player.tscn" id="2_d01oj"]
[ext_resource type="Script" path="res://addons/MultiplayCore/auths/MPAuth.gd" id="3_ta4np"]
[ext_resource type="Script" path="res://addons/MultiplayCore/net_protocols/ENetProtocol.gd" id="4_gpbte"]
[ext_resource type="Script" path="res://tests/TestScriptz.gd" id="6_kqkof"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jls2"]
size = Vector2(1174, 23)

[node name="MultiPlay" type="Node2D"]

[node name="MultiplayCore" type="Node" parent="."]
script = ExtResource("1_ubvtg")
player_scene = ExtResource("2_d01oj")
swap_input_action = "swap"

[node name="MPAuth" type="Node" parent="MultiplayCore"]
script = ExtResource("3_ta4np")

[node name="ENetProtocol" type="Node" parent="MultiplayCore"]
script = ExtResource("4_gpbte")

[node name="PassAuth" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-24, 602)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(577, 1.5)
shape = SubResource("RectangleShape2D_0jls2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="test" type="Node2D" parent="."]
script = ExtResource("6_kqkof")

[connection signal="player_connected" from="MultiplayCore" to="test" method="_on_multiplay_core_player_connected"]
[connection signal="player_disconnected" from="MultiplayCore" to="test" method="_on_multiplay_core_player_disconnected"]
